
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int verifier_log ;
union bpf_attr {int key_size; int value_size; int max_entries; int log_level; int log_size; int log_buf; int license; int insns; int insn_cnt; int prog_type; int map_type; } ;
typedef int uint64_t ;
struct bpf_insn {int dummy; } ;


 int ARRSIZE (struct bpf_insn*) ;
 struct bpf_insn BPF_EXIT_INSN () ;
 struct bpf_insn BPF_LD_MAP_FD (int ,int) ;
 int BPF_MAP_CREATE ;
 int BPF_MAP_TYPE_ARRAY ;
 struct bpf_insn BPF_MOV64_IMM (int ,int ) ;
 int BPF_PROG_LOAD ;
 int BPF_PROG_TYPE_SOCKET_FILTER ;
 int BPF_REG_0 ;
 int bpf_ (int ,union bpf_attr*) ;
 int err (int,char*) ;
 int puts (char*) ;

int main(void) {
  union bpf_attr create_map_attrs = {
    .map_type = BPF_MAP_TYPE_ARRAY,
    .key_size = 4,
    .value_size = 1,
    .max_entries = 1
  };
  int mapfd = bpf_(BPF_MAP_CREATE, &create_map_attrs);
  if (mapfd == -1)
    err(1, "map create");

  struct bpf_insn insns[] = {
    BPF_LD_MAP_FD(BPF_REG_0, mapfd),
    BPF_MOV64_IMM(BPF_REG_0, 0),
    BPF_EXIT_INSN()
  };
  char verifier_log[10000];
  union bpf_attr create_prog_attrs = {
    .prog_type = BPF_PROG_TYPE_SOCKET_FILTER,
    .insn_cnt = ARRSIZE(insns),
    .insns = (uint64_t)insns,
    .license = (uint64_t)"",
    .log_level = 1,
    .log_size = sizeof(verifier_log),
    .log_buf = (uint64_t)verifier_log
  };
  int progfd = bpf_(BPF_PROG_LOAD, &create_prog_attrs);
  if (progfd == -1)
    err(1, "prog load");

  puts(verifier_log);
}
